<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.CityForecastFragment">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/width_height"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtBatteryState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin1"
            android:layout_marginEnd="@dimen/margin1"
            android:layout_marginBottom="@dimen/margin1"
            android:padding="@dimen/padding"
            android:text="@string/battery_state"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/txtBatteryPercentage"
            style="@style/styleLinearLayout"
            android:layout_toEndOf="@+id/txtBatteryState"
            android:contentDescription="@string/city_list" />

        <ImageView
            android:id="@+id/iconBattery"
            style="@style/styleLinearLayout"
            android:layout_toEndOf="@+id/txtBatteryPercentage"
            android:contentDescription="@string/iconBattery" />

    </RelativeLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow style="@style/tableRow">

            <TextView
                android:id="@+id/txtTemp"
                style="@style/textView"
                android:text="@string/temperature" />

            <TextView
                android:id="@+id/txtTempDetail"
                style="@style/textView" />

        </TableRow>

        <TableRow style="@style/tableRow">

            <TextView
                android:id="@+id/txtTempMin"
                style="@style/textView"
                android:text="@string/temperature_min" />

            <TextView
                android:id="@+id/txtTempMinDetail"
                style="@style/textView" />

        </TableRow>

        <TableRow style="@style/tableRow">

            <TextView
                android:id="@+id/txtTempMax"
                style="@style/textView"
                android:text="@string/temperature_max" />

            <TextView
                android:id="@+id/txtTempMaxDetail"
                style="@style/textView" />

        </TableRow>

        <TableRow

            style="@style/tableRow">

            <TextView
                android:id="@+id/txtHumidity"
                style="@style/textView"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/txtHumidityDetail"
                style="@style/textView" />

        </TableRow>

        <TableRow style="@style/tableRow">

            <TextView
                android:id="@+id/txtPressure"
                style="@style/textView"
                android:text="@string/pressure" />

            <TextView
                android:id="@+id/txtPressureDetail"
                style="@style/textView" />

        </TableRow>

        <TableRow style="@style/tableRow">

            <TextView
                android:id="@+id/txtRain"
                style="@style/textView"
                android:text="@string/rain" />

            <TextView
                android:id="@+id/txtRainDetail"
                style="@style/textView" />

        </TableRow>

        <TableRow style="@style/tableRow">

            <TextView
                android:id="@+id/txtWindDegree"
                style="@style/textView"
                android:text="@string/wind_degree" />

            <TextView
                android:id="@+id/txtWindDegreeDetail"
                style="@style/textView" />


        </TableRow>

        <TableRow style="@style/tableRow">

            <TextView
                android:id="@+id/txtWindSpeed"
                style="@style/textView"
                android:text="@string/wind_speed" />

            <TextView
                android:id="@+id/txtWindSpeedDetail"
                style="@style/textView" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>